# FFmpegApp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  XPlayer.cpp  XPlayer.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/example/ffmpegapp/: DateUtil.kt  MainActivity.kt  XPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpegapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
